<resources>
    <string name="app_name">TP NOTE</string>
    <string name="date_de_naissance">Date de Naissance</string>
    <string name="pr_nom">Prénom*</string>
    <string name="nom">Nom*</string>
    <string name="valider">Valider</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="t_l_phone">Téléphone*</string>
    <string name="email">Email</string>
    <string name="adresse">Adresse</string>
    <string name="code_postal">Code postal</string>
    <string name="runtime_permissions_txt">Acceptez les permissions</string>
    <string name="liste_de_contact">Liste de contact</string>
    <string name="ajouter_un_contact">Ajouter un contact</string>
</resources>
